--- a/CSS/css-responsive_responsive-website/css/styles.css
+++ b/CSS/css-responsive_responsive-website/css/styles.css
@@ -259,11 +259,11 @@ width, etc. */
   }
 
   .product-card {
-    width: 48%;
+    width: 46%;
   }
 
   .intro-text{
-    width: 48%;
+    width: 46%;
 
   }
 
@@ -284,7 +284,7 @@ width, etc. */
 
   .product-card{
     width: 48%;
-    flex: .auto;;
+    flex: .auto;
   }
 
   .intro-text {
